# simple-sokol-cmake

./: 01_TrianguloAzul.cpp  02_TrianguloAzul-shdc.cpp  02_TrianguloAzul-shdc.glsl  03_Cuadrado2Triangulos.cpp  03_Cuadrado2Triangulos.glsl  03_CuadradoAzul.cpp  03_CuadradoAzul.glsl  04TexturaColor.cpp  04TexturaColor.glsl  04_2Texturas.cpp  04_2Texturas.glsl  04_Textura.cpp  CMakeLists.txt  README.md  ce.bat  ce.sh  main.cpp
